--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 /* Font Imports */
 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
+
+/* 
+
+font-family: 'IBM Plex Sans', sans-serif;
+
+Includes regular weight 400 and bold weight 700
+
+*/
 
 /*
 =======================
@@ -13,6 +22,10 @@ Variables
         --var-green-pink:#FFB964;
         --var-off-white:#FCFAF9;
         --var-off-black:#191826;
+        --var-h1: normal normal 700 clamp(2.3em, 4vw, 48px)/clamp(1em, 3vw, 48px) 'IBM Plex Sans', sans-serif;
+        --var-h2: normal normal 700 clamp(1.5em , 3.8vw, 40px)/clamp(1.2em , 3.2vw , 32px) 'IBM Plex Sans', sans-serif;
+        --var-body1: normal normal 400 20px/34px 'IBM Plex Sans', sans-serif;
+        --var-body2: normal normal 400 16px/26px 'IBM Plex Sans', sans-serif;
 }
 
 /*
@@ -39,6 +52,48 @@ Typography
 =======================
 */
 
+h1 {
+        font: var(--var-h1);
+        letter-spacing: -1px;
+}
+
+h2 {
+        font: var(--var-h2);
+}
+
+p {
+        font: var(--var-body2);
+}
+
+button {
+        display: block;
+        width: 100%;
+        padding: 0 3em;
+}
+
+button + button {
+        margin-top: 1em;
+}
+
+/*
+=======================
+Flex
+=======================
+*/
+
+.flex {
+        display: flex;
+}
+
+.flex-center {
+        justify-content: center;
+        align-items: center;
+}
+
+.flex-column {
+        flex-direction: column;
+}
+
 
 /*
 =======================
@@ -48,42 +103,129 @@ Layout
 
 section#one {
         background-image: url('/assets/bg-main-mobile.png');
-        background-size: 100%;
-        height: 1em;
-        padding-bottom: 20em;
+        background-size: 500px;
+        height: fit-content;
+        padding: 3em;
+        margin-bottom: 8em;
         background-repeat: no-repeat;
-        background-position: 8em 150%;
+        background-position: 3em -13em;
 }
 
 section#two {
         background-color: black;
-        border-radius: 7px;
+        border-radius: 12px;
+        position: relative;
 }
 
-section#three {
-        background-color: var(--var-light-red);
-        margin-top: -4em;
-        border-radius: 7px;
-}
-
-#picture {
-        background-image: url('/assets/equalizer.svg');
-        background-size: 100%;
+section#picture {
+        background-image: url('/assets/bg-pattern-2.svg');
+        background-size: contain;
         background-repeat: no-repeat;
+        margin: 0 auto;
         width: 100%;
+        max-width: 280px;
         padding-bottom: 1em;
 }
 
 .phone-img {
         position: relative;
-        width: 60%;
+        width: 85%;
+        max-width: 450px;
         margin: 0 auto;
         display: block;
-        top: -4em;
+        bottom: 7em;
 }
+
+section#three {
+        background-color: var(--var-light-red);
+        margin-top: -2em;
+        border-radius: 12px;
+        padding: .5em 3em 2em 3em;
+        color: var(--var-off-white);
+}
+
+.span-big {
+        font: var(--var-h2);
+        font-size: 4em;
+}
+
+.span-small {
+        font-weight: 700;
+}
+
+.media-widgets {
+        margin-top: 4.5em;
+        gap: 1.1em;
+}
+
+footer {
+        padding: 3em;
+}
+
+/*
+=======================
+Specifics
+=======================
+*/
+
+.apple, .android {
+        border: none;
+        padding: 1.2em;
+        font-weight: 700;
+        border-radius: 12px;
+}
+
+.apple {
+        background-color: var(--var-off-black);
+        color: var(--var-off-white);
+}
+
+.apple:hover {
+        background-color: var(--var-grey);
+}
+
+.apple-logo {
+        width: 1em;
+        margin-right: .4em;
+}
+
+.android {
+        background-color: var(--var-off-white);
+        color: var(--var-off-black);
+}
+
+.android:hover {
+        background-color: var(--var-green-pink);
+}
+
+.android-logo {
+        width: 1em;
+        margin-right: .4em;
+}
+
+
+
 
 /*
 =======================
 Media Queries
 =======================
 */
+
+@media (min-width:750px) {
+        section#two {
+                width: 90%;
+                margin: 0 auto;
+                display: flex;
+        }
+        section#picture {
+                width: 280;
+                height: 420;
+                margin-top: -4em;
+
+        }
+        .phone-img {
+                right: 9em;
+                bottom: 3em;
+        }
+}
